# c002_parlant_config_manager1

./: .env.example  .gitignore  README.md  __init__.py  changelog.md  check_syntax.py  check_syntax_simple.py  create_new_env.bat  pytest.ini  requirements.txt  run.sh  start_ui.py  start_ui_mock.bat  start_ui_mock.sh  test_deep_research_standalone.py  test_mock_data.py  test_tavily_standalone.py
docs/tools_docs/agentscope_docs/examples/agent/a2ui_agent/samples/general_agent/: __main__.py  a2ui_utils.py  agent_card.py  prompt_builder.py  pyproject.toml  setup_a2ui_server.py
docs/tools_docs/agentscope_docs/examples/agent/a2ui_agent/samples/general_agent/skills/A2UI_response_generator/: SKILL.md  __init__.py  view_a2ui_examples.py  view_a2ui_schema.py
docs/tools_docs/agentscope_docs/examples/agent/a2ui_agent/samples/general_agent/skills/A2UI_response_generator/UI_templete_examples/: __init__.py  booking_form.py  contact_form.py  email_compose_form.py  error_message.py  info_message.py  item_detail_card_with_image.py  profile_view.py  search_filter_form.py  selection_card.py  simple_column_list_without_image.py  single_column_list.py  success_confirmation_with_image.py  two_column_list.py
docs/tools_docs/agentscope_docs/examples/agent/a2ui_agent/samples/general_agent/skills/A2UI_response_generator/schema/: __init__.py  base_schema.py
src/: README.md
tests/: README.md  __init__.py  conftest.py  step8_dedup_regression.py  test_agents.py  test_agentscope_tools.py  test_config_assembly_generates_branches_from_step2.py  test_config_assembly_skip_branch_without_parent.py  (+14 more)
(+643 files in other folders)
